# couchestor-ce

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  EDITIONS.md  LICENSE  README.md  build.rs  codecov.yml
deploy/: README.md  operator.yaml
deploy/crds/: erasurecodingpolicy-crd.yaml  storagepolicy-crd.yaml
deploy/examples/: erasurecodingpolicy-examples.yaml  storagepolicy-examples.yaml
docs/: AI_CHANGELOG.md  README.md  acceptance-criteria.md  architecture.md  brd.md  database-schema.md  deployment.md  enterprise-architecture.md  gap-analysis.md  hardware-requirements.md  hld.md  lld.md  prd.md  release-notes.md  software-architecture.md  software-requirements.md  technical-specifications.md  technical-writeup.md  testing-requirements-aidd.md  training-manual-admin.md  training-manual-developer.md  training-manual-enduser.md  training-video-scripts.md  use-cases.md  user-manual-admin.md  user-manual-developer.md  user-manual-enduser.md  workflows.md
docs/architecture/: ADR-001-three-tier-storage.md  ARCHITECTURE.md  COMPONENTS.md  DATA_FLOW.md
docs/design/: API_REFERENCE.md  Figma_Make_Prompts.md  HLD.md  LLD.md
docs/enterprise/: ENTERPRISE_ARCHITECTURE.md  SCALABILITY.md  SECURITY.md
docs/installation/: CLOUDSTACK.md  HARVESTER_HCI.md  NUTANIX.md  OPENSTACK.md  README.md
docs/requirements/: FUNCTIONAL_SPEC.md  PRD.md
docs/technical/: BENCHMARKS.md  DATASHEET.md  FEATURES.md  INTEGRATION.md
docs/training/: ADMIN_TRAINING.md  DEVELOPER_TRAINING.md  EXECUTIVE_OVERVIEW.md  OPERATIONS_TRAINING.md
docs/user-manuals/: ADMIN_GUIDE.md  OPERATOR_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md
docs/video-scripts/: 01_INTRODUCTION.md  02_INSTALLATION.md  03_CONFIGURATION.md  04_OPERATIONS.md  05_TROUBLESHOOTING.md
src/: error.rs  lib.rs  main.rs
src/adapters/: event_publisher.rs  kubernetes.rs  mayastor.rs  mod.rs  prometheus.rs  reed_solomon.rs
src/controller/: ec_policy.rs  mod.rs  storage_policy.rs
src/crd/: erasure_coding.rs  mayastor.rs  mod.rs  storage_policy.rs
src/domain/: events.rs  mod.rs  ports.rs
src/ec/: encoder.rs  metadata.rs  mod.rs  proptest.rs  reconstruction.rs  stripe_manager.rs
src/hardware/: mod.rs
src/hardware/discovery/: mod.rs  nvme.rs  sas_sata.rs  scanner.rs
src/metrics/: mod.rs  watcher.rs
src/migrator/: engine.rs  mod.rs
src/rustfs/: mod.rs
src/spdk/: bdev.rs  compression.rs  destage_manager.rs  dma_buf.rs  ec_engine.rs  ffi.rs  isal_codec.rs  metadata_engine.rs  mock.rs  mod.rs  read_path.rs  stripe_processor.rs  zns.rs
tests/: ec_integration.rs  integration_tests.rs
(+14 files in other folders)
