[package]
name = "couchestor"
version = "0.1.0"
edition = "2021"
authors = ["BillyRonks Global Limited <engineering@billyronks.io>"]
description = "CoucheStor Community Edition - Intelligent tiered storage operator for Kubernetes with erasure coding"
license = "Apache-2.0"
repository = "https://github.com/abiolaogu/couchestor-ce"
keywords = ["kubernetes", "operator", "storage", "tiering", "erasure-coding"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# Async runtime
tokio = { version = "1.36", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client (for Prometheus)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"

# Schema generation
schemars = { version = "0.8", features = ["chrono"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics exposition
prometheus = "0.14"
hyper = { version = "1.5", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

# Utilities
parking_lot = "0.12"
dashmap = "6.1"
crossbeam = "0.8"
urlencoding = "2.1.3"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4"] }

# Erasure Coding
reed-solomon-erasure = "6.0"

# Zero-copy bytes
bytes = "1.5"

# Compression (LZ4 only in CE)
lz4 = "1.28"

[features]
default = []

# SPDK integration for high-performance DMA memory and NVMe operations
spdk = ["libc"]

# Mock SPDK for testing without native libraries
mock-spdk = []

# Legacy alias for SPDK+ISA-L integration
ec-sidecar = ["spdk"]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "couchestor"
path = "src/lib.rs"

[[bin]]
name = "couchestor"
path = "src/main.rs"
